@@ -22,6 +22,7 @@ package org.matsim.core.scoring;
 import com.google.inject.Inject;
 import org.apache.logging.log4j.LogManager;
 import org.matsim.api.core.v01.Id;
+import org.matsim.api.core.v01.IdMap;
 import org.matsim.api.core.v01.Scenario;
 import org.matsim.api.core.v01.events.*;
 import org.matsim.api.core.v01.events.handler.*;
@@ -47,7 +48,6 @@ import org.matsim.pt.transitSchedule.api.TransitStopFacility;
 import org.matsim.vehicles.Vehicle;
 
 import java.util.ArrayList;
-import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -63,23 +63,28 @@ import java.util.Map;
  * @author michaz
  */
 public final class EventsToLegs
-		implements PersonDepartureEventHandler, PersonArrivalEventHandler, LinkEnterEventHandler,
-		TeleportationArrivalEventHandler, TransitDriverStartsEventHandler, PersonEntersVehicleEventHandler,
-		VehicleArrivesAtFacilityEventHandler, VehicleEntersTrafficEventHandler, VehicleLeavesTrafficEventHandler {
+	implements PersonDepartureEventHandler, PersonArrivalEventHandler, LinkEnterEventHandler,
+	TeleportationArrivalEventHandler, TransitDriverStartsEventHandler, PersonEntersVehicleEventHandler,
+	PersonContinuesInVehicleEventHandler,
+	VehicleArrivesAtFacilityEventHandler, VehicleEntersTrafficEventHandler, VehicleLeavesTrafficEventHandler {
 
 	public static final String ENTER_VEHICLE_TIME_ATTRIBUTE_NAME = "enterVehicleTime";
 	public static final String VEHICLE_ID_ATTRIBUTE_NAME = "vehicleId";
 
-	private static class PendingTransitTravel {
-		final Id<Vehicle> vehicleId;
-		final Id<TransitStopFacility> accessStop;
-		final double boardingTime;
+	private record PendingTransitTravel(
+		Id<Vehicle> vehicleId,
+		Id<TransitStopFacility> accessStop,
+		double boardingTime) {
+	}
 
-		PendingTransitTravel(Id<Vehicle> vehicleId, Id<TransitStopFacility> accessStop, double boardingTime) {
-			this.vehicleId = vehicleId;
-			this.accessStop = accessStop;
-			this.boardingTime = boardingTime;
-		}
+	/**
+	 * Stores change of vehicles within a single transit trip (without transferring).
+	 */
+	private record PendingTransitChain(
+		double boardingTime,
+		Id<Vehicle> vehicleId,
+		Id<TransitStopFacility> accessStop
+	) {
 	}
 
 	private static class LineAndRoute {
@@ -97,16 +102,16 @@ public final class EventsToLegs
 		@Override
 		public String toString() {
 			return "["
-					+ super.toString()
-					+ " transitLineId="
-					+ transitLineId
-					+ " transitRouteId="
-					+ transitRouteId
-					+ " driverId="
-					+ driverId
-					+ " lastFacilityId="
-					+ lastFacilityId
-					+ "]";
+				+ super.toString()
+				+ " transitLineId="
+				+ transitLineId
+				+ " transitRouteId="
+				+ transitRouteId
+				+ " driverId="
+				+ driverId
+				+ " lastFacilityId="
+				+ lastFacilityId
+				+ "]";
 		}
 	}
 
@@ -131,7 +136,7 @@ public final class EventsToLegs
 		void handleLeg(PersonExperiencedLeg leg);
 	}
 
-	private Network network;
+	private final Network network;
 	private TransitSchedule transitSchedule = null;
 
 	@Inject(optional = true)
@@ -139,19 +144,20 @@ public final class EventsToLegs
 		this.transitSchedule = transitSchedule;
 	}
 
-	private Map<Id<Person>, Leg> legs = new HashMap<>();
-	private Map<Id<Person>, List<Id<Link>>> experiencedRoutes = new HashMap<>();
-	private Map<Id<Person>, Double> relPosOnDepartureLinkPerPerson = new HashMap<>();
-	private Map<Id<Person>, Double> relPosOnArrivalLinkPerPerson = new HashMap<>();
+	private final Map<Id<Person>, Leg> legs = new IdMap<>(Person.class);
+	private final Map<Id<Person>, List<Id<Link>>> experiencedRoutes = new IdMap<>(Person.class);
+	private final Map<Id<Person>, Double> relPosOnDepartureLinkPerPerson = new IdMap<>(Person.class);
+	private final Map<Id<Person>, Double> relPosOnArrivalLinkPerPerson = new IdMap<>(Person.class);
 
-	private Map<Id<Person>, TeleportationArrivalEvent> routelessTravels = new HashMap<>();
-	private Map<Id<Person>, PendingTransitTravel> transitTravels = new HashMap<>();
-	private Map<Id<Person>, PendingVehicleTravel> vehicleTravels = new HashMap<>();
+	private final Map<Id<Person>, TeleportationArrivalEvent> routelessTravels = new IdMap<>(Person.class);
+	private final Map<Id<Person>, PendingTransitTravel> transitTravels = new IdMap<>(Person.class);
+	private final Map<Id<Person>, List<PendingTransitChain>> transitChains = new IdMap<>(Person.class);
+	private final Map<Id<Person>, PendingVehicleTravel> vehicleTravels = new IdMap<>(Person.class);
 
-	private Map<Id<Vehicle>, LineAndRoute> transitVehicle2currentRoute = new HashMap<>();
-	private Map<Id<Vehicle>, VehicleRoute> vehicle2route = new HashMap<>();
+	private final Map<Id<Vehicle>, LineAndRoute> transitVehicle2currentRoute = new IdMap<>(Vehicle.class);
+	private final Map<Id<Vehicle>, VehicleRoute> vehicle2route = new IdMap<>(Vehicle.class);
 
-	private List<LegHandler> legHandlers = new ArrayList<>();
+	private final List<LegHandler> legHandlers = new ArrayList<>();
 
 	public EventsToLegs(Scenario scenario) {
 		this.network = scenario.getNetwork();
@@ -203,7 +209,7 @@ public final class EventsToLegs
 			if (!event.getPersonId().equals(lineAndRoute.driverId)) {
 				// transit drivers are not considered to travel by transit
 				transitTravels.put(event.getPersonId(),
-						new PendingTransitTravel(event.getVehicleId(), lineAndRoute.lastFacilityId, event.getTime()));
+					new PendingTransitTravel(event.getVehicleId(), lineAndRoute.lastFacilityId, event.getTime()));
 			}
 		} else {
 			VehicleRoute route = vehicle2route.computeIfAbsent(event.getVehicleId(), vehicleId -> new VehicleRoute());
@@ -212,6 +218,12 @@ public final class EventsToLegs
 			vehicleTravels.put(event.getPersonId(), vehicleTravel);
 			route.newVehicleTravels.add(vehicleTravel);
 		}
+	}
+
+	@Override
+	public void handleEvent(PersonContinuesInVehicleEvent event) {
+		transitChains.computeIfAbsent(event.getPersonId(), (k) -> new ArrayList<>())
+			.add(new PendingTransitChain(event.getTime(), event.getVehicleId(), event.getStopFacilityId()));
 	}
 
 	@Override
@@ -227,7 +239,7 @@ public final class EventsToLegs
 
 			//update relativePositionOnDepartureLink for each new passenger and the driver
 			route.newVehicleTravels.forEach(
-					vehicleTravel -> vehicleTravel.relativePositionOnDepartureLink = event.getRelativePositionOnLink());
+				vehicleTravel -> vehicleTravel.relativePositionOnDepartureLink = event.getRelativePositionOnLink());
 			route.newVehicleTravels.clear();
 		}
 	}
@@ -264,16 +276,14 @@ public final class EventsToLegs
 	@Override
 	public void handleEvent(PersonArrivalEvent event) {
 		Leg leg = legs.get(event.getPersonId());
-		leg.setTravelTime(event.getTime() - leg.getDepartureTime().seconds());
-		double travelTime = leg.getDepartureTime().seconds()
-				+ leg.getTravelTime().seconds() - leg.getDepartureTime().seconds();
+		var travelTime = event.getTime() - leg.getDepartureTime().seconds();
 		leg.setTravelTime(travelTime);
 		List<Id<Link>> experiencedRoute = experiencedRoutes.get(event.getPersonId());
-		assert experiencedRoute.size() >= 1;
+		assert !experiencedRoute.isEmpty() : "Experienced route for personId: " + event.getPersonId() + " is empty.";
 		PendingTransitTravel pendingTransitTravel;
 		PendingVehicleTravel pendingVehicleTravel;
 		if (experiencedRoute.size() > 1) { // different links processed
-			NetworkRoute networkRoute = RouteUtils.createNetworkRoute(experiencedRoute );
+			NetworkRoute networkRoute = RouteUtils.createNetworkRoute(experiencedRoute);
 			networkRoute.setTravelTime(travelTime);
 
 			/* use the relative position of vehicle enter/leave traffic events on first/last links
@@ -284,35 +294,37 @@ public final class EventsToLegs
 			Double relPosOnArrivalLink = relPosOnArrivalLinkPerPerson.get(event.getPersonId());
 			Gbl.assertNotNull(relPosOnArrivalLink);
 			networkRoute.setDistance(
-					RouteUtils.calcDistance(networkRoute, relPosOnDepartureLink, relPosOnArrivalLink, network));
+				RouteUtils.calcDistance(networkRoute, relPosOnDepartureLink, relPosOnArrivalLink, network));
 
 			leg.setRoute(networkRoute);
 		} else if ((pendingTransitTravel = transitTravels.remove(event.getPersonId())) != null) {
 			// i.e. experiencedRoute.size()==1 && pending transit travel (= person has entered a vehicle)
 
 			final LineAndRoute lineAndRoute = transitVehicle2currentRoute.get(pendingTransitTravel.vehicleId);
-			assert lineAndRoute != null;
+			assert lineAndRoute != null : "lineAndRoute for vehicle " + pendingTransitTravel.vehicleId + "is null";
 
 			final TransitStopFacility accessFacility = transitSchedule.getFacilities()
-					.get(pendingTransitTravel.accessStop);
-			assert accessFacility != null;
+				.get(pendingTransitTravel.accessStop);
+			assert accessFacility != null : "accessFacility for " + pendingTransitTravel.accessStop + " is null.";
 
 			final TransitLine line = transitSchedule.getTransitLines().get(lineAndRoute.transitLineId);
-			assert line != null;
+			assert line != null : "Transit line for transitLineId " + lineAndRoute.transitLineId + " is null.";
 
 			final TransitRoute route = line.getRoutes().get(lineAndRoute.transitRouteId);
-			assert route != null;
+			assert route != null : "route for transitRouteId " + lineAndRoute.transitRouteId + " is null.";
 
 			final Id<TransitStopFacility> lastFacilityId = lineAndRoute.lastFacilityId;
 			if (lastFacilityId == null) {
 				LogManager.getLogger(this.getClass()).warn("breakpoint");
 			}
-			assert lastFacilityId != null;
+			assert lastFacilityId != null : "lastFacilityId for " + lineAndRoute + "is null";
 
 			final TransitStopFacility egressFacility = transitSchedule.getFacilities().get(lastFacilityId);
-			assert egressFacility != null;
+			assert egressFacility != null : "egressFacility for lastFacilityId " + lastFacilityId + " is null.";
 
-			DefaultTransitPassengerRoute passengerRoute = new DefaultTransitPassengerRoute(accessFacility, line, route, egressFacility);
+			DefaultTransitPassengerRoute passengerRoute = new DefaultTransitPassengerRoute(accessFacility, line, route, egressFacility,
+				createChainedRoute(transitChains.remove(event.getPersonId())));
+
 			passengerRoute.setBoardingTime(pendingTransitTravel.boardingTime);
 			passengerRoute.setTravelTime(travelTime);
 			passengerRoute.setDistance(RouteUtils.calcDistance(passengerRoute, transitSchedule, network));
@@ -320,18 +332,18 @@ public final class EventsToLegs
 		} else if ((pendingVehicleTravel = vehicleTravels.remove(event.getPersonId())) != null) {
 			VehicleRoute vehicleRoute = pendingVehicleTravel.route;
 			List<Id<Link>> traveledLinks = vehicleRoute.links.subList(pendingVehicleTravel.accessLinkIdx,
-					vehicleRoute.links.size());
+				vehicleRoute.links.size());
 			Route route;
 			if (traveledLinks.isEmpty()) {//special case: enter and leave vehicle without entering traffic
-				route = RouteUtils.createGenericRouteImpl(experiencedRoute.get(0), event.getLinkId());
+				route = RouteUtils.createGenericRouteImpl(experiencedRoute.getFirst(), event.getLinkId());
 				route.setDistance(0.0);
 			} else {
-				route = RouteUtils.createNetworkRoute(traveledLinks );
+				route = RouteUtils.createNetworkRoute(traveledLinks);
 				double relPosOnDepartureLink = pendingVehicleTravel.relativePositionOnDepartureLink;
 				double relPosOnArrivalLink = vehicleRoute.relativePositionOnLastArrivalLink;
 				route.setDistance(
-						RouteUtils.calcDistance((NetworkRoute)route, relPosOnDepartureLink, relPosOnArrivalLink,
-								network));
+					RouteUtils.calcDistance((NetworkRoute) route, relPosOnDepartureLink, relPosOnArrivalLink,
+						network));
 			}
 			route.setTravelTime(travelTime);
 			leg.setRoute(route);
@@ -339,7 +351,7 @@ public final class EventsToLegs
 		} else {
 			// i.e. experiencedRoute.size()==1 and no pendingTransitTravel
 			TeleportationArrivalEvent travelEvent = routelessTravels.remove(event.getPersonId());
-			Route genericRoute = RouteUtils.createGenericRouteImpl(experiencedRoute.get(0), event.getLinkId());
+			Route genericRoute = RouteUtils.createGenericRouteImpl(experiencedRoute.getFirst(), event.getLinkId());
 			genericRoute.setTravelTime(travelTime);
 			if (travelEvent != null) {
 				genericRoute.setDistance(travelEvent.getDistance());
@@ -349,15 +361,42 @@ public final class EventsToLegs
 			leg.setRoute(genericRoute);
 		}
 
+		PersonExperiencedLeg personExperiencedLeg = new PersonExperiencedLeg(event.getPersonId(), leg);
 		for (LegHandler legHandler : legHandlers) {
-			legHandler.handleLeg(new PersonExperiencedLeg(event.getPersonId(), leg));
+			legHandler.handleLeg(personExperiencedLeg);
 		}
+	}
+
+	/**
+	 * Reconstruct information of used chained departures within a single transit trip.
+	 */
+	private DefaultTransitPassengerRoute createChainedRoute(List<PendingTransitChain> chains) {
+		if (chains == null || chains.isEmpty())
+			return null;
+
+		PendingTransitChain chain = chains.removeFirst();
+		TransitStopFacility stop = transitSchedule.getFacilities().get(chain.accessStop);
+
+		LineAndRoute lineAndRoute = transitVehicle2currentRoute.get(chain.vehicleId);
+
+		TransitLine line = transitSchedule.getTransitLines().get(lineAndRoute.transitLineId);
+		TransitRoute route = line.getRoutes().get(lineAndRoute.transitRouteId);
+
+		TransitStopFacility last = transitSchedule.getFacilities().get(lineAndRoute.lastFacilityId);
+
+		DefaultTransitPassengerRoute r = new DefaultTransitPassengerRoute(
+			stop, line, route, last,
+			createChainedRoute(chains)
+		);
+		r.setBoardingTime(chain.boardingTime);
+
+		return r;
 	}
 
 	@Override
 	public void handleEvent(TransitDriverStartsEvent event) {
 		LineAndRoute lineAndRoute = new LineAndRoute(event.getTransitLineId(), event.getTransitRouteId(),
-				event.getDriverId());
+			event.getDriverId());
 		transitVehicle2currentRoute.put(event.getVehicleId(), lineAndRoute);
 	}
 
